<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaJuniorFragment">

    <TextView
        android:id="@+id/tvResAJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="231dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btCAJ"
        app:layout_constraintStart_toStartOf="@+id/btCAJ"
        app:layout_constraintTop_toBottomOf="@+id/etNameAJ" />

    <EditText
        android:id="@+id/etNameAJ"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="99dp"
        android:layout_marginBottom="334dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvResAJ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAddressAJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/etBirthAJ"
        app:layout_constraintTop_toBottomOf="@+id/etBirthAJ" />

    <EditText
        android:id="@+id/etBirthAJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/birthDate"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/etNameAJ"
        app:layout_constraintTop_toBottomOf="@+id/etNameAJ" />

    <EditText
        android:id="@+id/etTimeAJ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/competitionTime"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/etAddressAJ"
        app:layout_constraintTop_toBottomOf="@+id/etAddressAJ" />

    <Button
        android:id="@+id/btCAJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTimeAJ" />
</androidx.constraintlayout.widget.ConstraintLayout>